# qt_opencv_demo_1

./: .gitignore  CMakeLists.txt  README.en.md  README.md
CmakeFuncs/: CmakeFuncsConfig.cmake
src/libs/IntegralImage/: IntegralImage.cpp  IntegralImage.h  IntegralImage_export.h
src/libs/colorHistogram/: ColorHistogram.cpp  ColorHistogram.h  ColorHistogram_export.h
src/libs/colordetector/: Colordetector.cpp  Colordetector.h  Colordetector_export.h
src/libs/contentFinder/: CMakeLists.txt  ContentFinder.cpp  ContentFinder.h  ContentFinder_export.h
src/libs/conver/: CMakeLists.txt  ConverQimageOrCvMat.h  ConverStr.cpp  ConverStr.h  Conver_export.h
src/libs/converQimageOrCvMat/: CMakeLists.txt  ConverQimageOrCvMat.cpp  ConverQimageOrCvMat.h  ConverQimageOrCvMat_export.h  CvFunction.h
src/libs/cvFunction/: CMakeLists.txt  CvFunction.cpp  CvFunction.h  CvFunction_export.h
src/libs/histogram/: Histogram.cpp  Histogram.h  Histogram_export.h
src/libs/imageComparator/: CMakeLists.txt  ImageComparator.cpp  ImageComparator.h  ImageComparator_export.h
src/libs/integral/: Integral.cpp  Integral.h  Integral_export.h
src/res/resources/: CMakeLists.txt
src/uis/demo001/: CMakeLists.txt  main.cpp
src/uis/demo002/: CMakeLists.txt
src/uis/unit001/demo1_001/: CMakeLists.txt  main.cpp
src/uis/unit001/demo1_002/: CMakeLists.txt
src/uis/unit002/demo001_001/: CMakeLists.txt
src/uis/unit002/demo001_002/: main.cpp
src/uis/unit002/demo2_001/: CMakeLists.txt  demo001.cpp  demo001.h  main.cpp  namespaceFun.cpp  namespaceFun.h
src/uis/unit002/demo2_002/: CMakeLists.txt  demo002.h  main.cpp
src/uis/unit002/demo2_003/: CMakeLists.txt  demo003.h  main.cpp
src/uis/unit002/demo2_004/: CMakeLists.txt  demo004.cpp  main.cpp
src/uis/unit002/demo2_005/: CMakeLists.txt  main.cpp
src/uis/unit002/demo2_006/: CMakeLists.txt  demo006.h  main.cpp
src/uis/unit002/demo2_007/: CMakeLists.txt  main.cpp
src/uis/unit003/demo002_002/: demo002.cpp  main.cpp
src/uis/unit003/demo002_003/: demo003.cpp
src/uis/unit003/demo002_006/: demo006.cpp  main.cpp
src/uis/unit003/demo002_007/: CMakeLists.txt  demo007.h
src/uis/unit003/demo2_003/: CMakeLists.txt
src/uis/unit003/demo2_004/: demo004.h
src/uis/unit003/demo2_005/: demo005.cpp  demo005.h
src/uis/unit003/demo2_007/: demo007.cpp  main.cpp
src/uis/unit003/demo3_001/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_002/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_003/: CMakeLists.txt
src/uis/unit003/demo3_004/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_005/: CMakeLists.txt  Colorhistogram.h  ContentFinder.h  Histogram.h  ImageComparator.h  Integral.h  main.cpp
src/uis/unit003/demo3_006/: main.cpp
src/uis/unit003/demo3_007/: main.cpp
src/uis/unit003/demo3_008/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_009/: main.cpp
src/uis/unit003/demo3_010/: main.cpp
src/uis/unit003/demo3_011/: main.cpp
src/uis/unit003/demo3_012/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_013/: CMakeLists.txt  main.cpp
src/uis/unit003/demo3_014/: main.cpp
src/uis/unit003/demo3_015/: main.cpp
src/uis/unit003/demo3_016/: main.cpp
src/uis/unit003/demo3_017/: main.cpp
src/uis/unit003/demo3_018/: main.cpp
src/uis/unit004/demo003_002/: CMakeLists.txt
src/uis/unit004/demo003_004/: CMakeLists.txt
src/uis/unit004/demo003_012/: main.cpp
src/uis/unit004/demo003_015/: main.cpp
src/uis/unit004/demo003_016/: main.cpp
src/uis/unit004/demo003_018/: main.cpp
src/uis/unit004/demo3_003/: CMakeLists.txt  main.cpp
src/uis/unit004/demo3_005/: main.cpp
src/uis/unit004/demo3_006/: main.cpp
src/uis/unit004/demo3_014/: main.cpp
src/uis/unit004/demo3_016/: CMakeLists.txt
src/uis/unit005/demo005_001/: CMakeLists.txt
